<package format="2">
  <name>table_arm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for table_arm</p>
    <p>This package contains configuration data, 3D models and launch files
for table_arm robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
